--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^9.105.1",
     "@react-three/fiber": "^8.16.1",
-    "firebase": "^10.6.0",
+    "firebase": "^10.10.0",
     "framer-motion": "^9.1.7",
     "maath": "^0.5.3",
     "react": "^18.2.0",
@@ -27,8 +27,12 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
-    "vite": "^5.2.8"
+    "terser-webpack-plugin": "^5.3.10",
+    "vite": "^5.2.8",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
