--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^9.105.1",
     "@react-three/fiber": "^8.16.1",
+    "caniuse-lite": "^1.0.30001606",
     "firebase": "^10.10.0",
     "framer-motion": "^9.1.7",
     "maath": "^0.5.3",
